--- a/Annadata/app/src/main/res/values/strings.xml
+++ b/Annadata/app/src/main/res/values/strings.xml
@@ -11,7 +11,6 @@
     <string name="submit">Submit</string>
     <string name="username">Username</string>
     <string name="log_in">Log in</string>
-    <string name="categories">Categories</string>
 
     <string name="register">REGISTER</string>
     <string name="login_email_hint">Email</string>
@@ -20,7 +19,6 @@
     <string name="login_signup_hint">Don\'t have an account?</string>
     <string name="signin"> Sign In</string>
     <string name="signup"> Sign Up</string>
-    <string name="food_market">Food Market</string>
     <string name="conform">Confirm</string>
     <string name="delivery_section">Delivery Section</string>
     <string name="delivery">Delivery</string>
@@ -28,23 +26,30 @@
 
     <string name="TextView">TextView</string>
     <string name="dsec"></string>
-    <string name="forgetpass">Forgot Password?</string>
     <string name="login">Log in</string>
     <string name="profile">Profile</string>
     <string name="expand">expand all</string>
-    <string name="seller">Seller</string>
     <string name="buyer">Buyer</string>
     <string name="uname">User Name</string>
     <string name="cartmoney">Cart  Money</string>
     <string name="point">Donate Point</string>
     <string name="txtv">textview</string>
-    <string name="txtv2">$100</string>
-    <string name="dcharge">Delevery \Charge</string>
-    <string name="daddress">Enter Address To Deliver Food</string>
     <string name="history">HISTORY</string>
     <string name="shistory">Sell \nHistory</string>
     <string name="dhistory">Donate \nHistory</string>
     <string name="delhistory">Delevery \nHistory</string>
+
+    <string name="or">Enter Number of Order</string>
+    <string name="addf">Enter Address To Deliver Food</string>
+    <string name="otime">Order Time</string>
+    <string name="fsell">Food\nSell</string>
+    <string name="fdonate">Food Donate</string>
+    <string name="finfo">Food Information</string>
+    <string name="fdate">Food Date</string>
+    <string name="forget">Forgot Password?</string>
+    <string name="retailer">Retailer</string>
+    <string name="logout">Log Out</string>
+    <string name="name">Name</string>
 
 
 </resources>
